name:                docker-client
version:             0.1.0.0
synopsis:            A docker client for Haskell
description:         Please see README.md
homepage:            https://github.com/kseo/docker-client#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           BSD3
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Docker.Client.Api
                       Docker.Client.Client
                       Docker.Client.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-api-data
                     , http-client
                     , network
                     , servant
                     , servant-client
                     , text
                     , time
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options: -Wall -O2

executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-client
                     , optparse-applicative
                     , servant
                     , servant-client
                     , docker-client
  default-language:    Haskell2010

test-suite docker-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , docker-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/docker-client
